# Intellia-AI

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  users.db
alembic/: env.py
alembic/versions/: 68a03e59443f_fix_role_permissions_primary_key.py  80746b5cac69_initial_migration.py
app/: main.py
app/api/: router.py
app/core/: config.py  errors.py  security.py
app/db/: __init__.py  base.py  base_repo.py  factory.py  session.py
app/integrations/ai/: client.py  prompts.py  safety.py
app/integrations/ai/prompts/: generate_report.txt  prompt.txt
app/integrations/mail/: client.py  console.py  sender.py  smtp.py  templates.py
app/modules/ai/: page_rules.py  schemas.py  service.py
app/modules/auth/: deps.py  jwt.py  models.py  pass_hash.py  repository.py  schemas.py  seed_rbac.py  service.py
app/modules/auth/api/auth/: api.py
app/modules/auth/keys/: private.pem  public.pem
app/modules/auth/models/: auth.py  permission.py  role.py  role_permission.py
app/modules/auth/repository/: __init__.py  auth.py  role_permission.py
app/modules/auth/schemas/: schemas.py
app/modules/auth/service/: auth.py  jwt.py  password_hash.py
app/modules/users/: models.py
app/shared/: utils.py
